@@ -5,6 +5,8 @@ wajig (2.0.49) unstable; urgency=low
     * Used to be "wajig --backup upgrade BKDIR".
     * Now it's "wajig --backup=BKDIR upgrade".
   * UPGRADE: Proceed to upgrade after using -b|--backup option.
+  * UPGRADE: Remove the option to install listed packages. This helps reduce
+    code complexity.
   * CHANGELOG: now displays uninstalled entries by default. (Closes: #424668).
   * CHANGELOG: Add -c|--complete option to display the whole thing. This was
     the default option, but suggestion offered in #424668 is more sane.
